# vendor_qcom_opensource_agm-sm8650

./: Makefile.am  configure.ac
ipc/DBus/agm_client/: Makefile.am
ipc/DBus/agm_server/: Makefile.am  agmserver.pc.in
ipc/HwBinders/agm_ipc_client/src/: agm_client_wrapper.cpp
ipc/HwBinders/agm_ipc_service/: Android.mk
ipc/HwBinders/agm_ipc_service/inc/: agm_server_wrapper.h
ipc/HwBinders/agm_ipc_service/src/: agm_server_wrapper.cpp
ipc/HwBinders/interfaces/: Android.bp
ipc/HwBinders/interfaces/AGMIPC/: Android.bp
plugins/: Android.mk
plugins/tinyalsa/: Android.mk  Makefile.am
plugins/tinyalsa/src/: agm_compress_plugin.c  agm_mixer_plugin.c  agm_pcm_plugin.c
plugins/tinyalsa/test/: Android.mk  Makefile.am  agm_voiceui.c  agmcap.c  agmcompresscap.c  agmcompressplay.c  agmhostless.c  agmmixer.c  agmmixer.h  agmplay.c  backend_conf.xml
service/: Android.mk  Makefile.am
service/inc/private/agm/: agm_memlogger.h  session_obj.h
service/inc/public/agm/: agm_api.h  utils.h
service/src/: agm.c  device.c  device_hw_ep.c  graph.c  graph_module.c  metadata.c  session_obj.c
snd_parser/: Makefile.am
snd_parser/configs/qcm6490/: card-defs.xml
snd_parser/src/: snd-card-parser.c
